After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 569846 - gnome-control-center-2.24.0.1 fails to build on BSD (setpgrp takes two arguments on BSD)
gnome-control-center-2.24.0.1 fails to build on BSD (setpgrp takes two argume...
Status: RESOLVED FIXED
Product: gnome-main-menu
Classification: Other
Component: libslab
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME main menu maintainers
GNOME main menu maintainers
Depends on:
Blocks:
 
 
Reported: 2009-01-30 16:32 UTC by Alexis Ballier
Modified: 2010-02-18 00:22 UTC
See Also:
GNOME target: ---
GNOME version: 2.23/2.24


Attachments
change setpgrp to setpgid (394 bytes, patch)
2009-01-30 16:33 UTC, Alexis Ballier
committed Details | Review

Description Alexis Ballier 2009-01-30 16:32:22 UTC
Please describe the problem:
According to:
http://www.opengroup.org/onlinepubs/9699919799/functions/setpgrp.html

setpgrp is deprecated and applications are encouraged to use setpgid() or setsid()

According to the manpage:
The System V-style setpgrp(), which takes no arguments, is equivalent to setpgid(0, 0).

So will follow a patch that fixes the build on BSD to reflect that.

Steps to reproduce:
1. 
2. 
3. 


Actual results:


Expected results:


Does this happen every time?


Other information:
Comment 1 Alexis Ballier 2009-01-30 16:33:16 UTC
Created attachment 127553 [details] [review]
change setpgrp to setpgid
Comment 2 Jens Granseuer 2009-01-30 17:03:03 UTC
Moving to libslab...
Comment 3 Vincent Untz 2010-02-18 00:22:29 UTC
Thanks, committed.