Use setpgid() instead of setpgrp() for portability

https://bugzilla.gnome.org/show_bug.cgi?id=569846